# raspberry-pi-camera-module-2

./: MAKE87.yml  README.md  pyproject.toml
app/: main.py
build_kit/: Dockerfile  Dockerfile.dev
